[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# :see: https://greenbone.github.io/autohooks/installation.html
[tool.autohooks]
mode = "poetry"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
    #    "autohooks.plugins.mypy",
    "autohooks.plugins.pytest"
]

[tool.mypy]
strict = true

[tool.poetry]
name = "phx-filters"
version = "3.4.0"
description = "Validation and data pipelines made easy!"
authors = ["Phoenix Zerin <phx@phx.nz>"]
license = "MIT"
readme = "README.rst"

documentation = "https://filters.readthedocs.io/"
repository = "https://github.com/todofixthis/filters"

keywords = [
    "data processing",
    "pipeline",
    "transformation",
    "validation",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Text Processing :: Filters',
]

include = [
    { path = "LICENCE.txt", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "test", format = "sdist" }
]
exclude = ["docs/_build"]
packages = [{ include = "filters", from = "src" }]

[tool.poetry.dependencies]
# I'm only one person, so to keep from getting overwhelmed, I'm only committing to
# supporting the 3 most recent versions of Python.
python = "^3.11"
phx-class-registry = "^5"
python-dateutil = "^2"
pytz = "^2024"
regex = "^2024"

[tool.poetry.extras]
# Extensions
django = ["phx-filters-django"]
iso = ["phx-filters-iso"]

[tool.poetry.group.dev.dependencies]
autohooks = "^24"
autohooks-plugin-black = "^23"
autohooks-plugin-mypy = "^23"
autohooks-plugin-pytest = "^23"
autohooks-plugin-ruff = "^24"
black = "^24"
mypy = "^1"
pytest = "^8"
sphinx = "^8"
sphinx_rtd_theme = "^3"
tox = "^4"

# Used by GitHub Actions.
[tool.poetry.group.ci.dependencies]
mypy = "^1"
pytest = "^8"
sphinx = "^8"
sphinx_rtd_theme = "^3"

[tool.poetry.urls]
Changelog = "https://github.com/todofixthis/filters/releases"
Issues = "https://github.com/todofixthis/filters/issues"

[tool.pytest.ini_options]
testpaths = ["test"]
